Changelog
=========


0.2.4 (2020/09/07)
------------------

- Ignore exceptions that are ignored in the root Zope error_log.
  [maurits]


0.2.3 (2020/08/05)
------------------
- Fix error handling on zope site root
  [krissik]

0.2.2 (2020/07/13)
------------------
- Add check with error_log ignored_exceptions before send exceptions to sentry
  [eikichi18]

0.2.1 (2020/07/08)
------------------
- Add SENTRY_ENVIRONMENT option.
  [fulv]

0.2.0 (2019/11/28)
------------------
- Add optional environment parameter to set max length of stacktrace ("SENTRY_MAX_LENGTH", default is 512)
  [Thokas]

0.1.7 (2019/10/21)
------------------
- Make collective.sentry configuration optional (do not load if no **SENTRY_DSN**)
  [kiorky]

0.1 (2019/08/15)
----------------

- initial release