@@ -2,6 +2,13 @@ Changelog
 =========
 
 
+UNRELEASED
+------------------
+
+- Add optional environment parameter for Sentry integrations ("SENTRY_INTEGRATIONS", comma seperated list)
+  [2silver]
+
+
 0.2.4 (2020/09/07)
 ------------------
 
